src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Component_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Component Type</label>
        <referenceTo>Component_Type__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deployed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate if the product is deployed in Product Master</description>
        <label>Deployed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LZ_Component_Type_ID__c</fullName>
        <description>fkComponentType column in ProductComponent of LZData</description>
        <label>LZ Component Type ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LZ_Parent_Product_ID__c</fullName>
        <description>From pkProductConfiguration column in ProductConfiguration table of LZData</description>
        <label>LZ Parent Product ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LZ_Process_ID__c</fullName>
        <description>iProcess from Process in LZData</description>
        <label>LZ Process ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LZ_Product_ID__c</fullName>
        <description>matching pkProductConfiguration column of ProductConfiguation table in LZData</description>
        <externalId>true</externalId>
        <label>LZ Product ID</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LZ_Product_Line_ID__c</fullName>
        <description>fkProductLine in Process from LZData</description>
        <label>LZ Product Line ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process</label>
        <referenceTo>Process__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Line</label>
        <referenceTo>Product_Line__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Relationship Type</label>
        <referenceTo>Relationship_Type__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>Abandoner_Package</fullName>
        <booleanFilter>1 AND (2 OR 3 OR 4 OR 5)</booleanFilter>
        <columns>LZ_Product_ID__c</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>LZ_Process_ID__c</columns>
        <columns>Process__c</columns>
        <columns>LZ_Component_Type_ID__c</columns>
        <columns>Component_Type__c</columns>
        <columns>LZ_Parent_Product_ID__c</columns>
        <columns>Parent__c</columns>
        <columns>LZ_Product_Line_ID__c</columns>
        <columns>Product_Line__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Component_Type__c</field>
            <operation>equals</operation>
            <value>package</value>
        </filters>
        <filters>
            <field>PRODUCT2.NAME</field>
            <operation>contains</operation>
            <value>llc</value>
        </filters>
        <filters>
            <field>PRODUCT2.NAME</field>
            <operation>contains</operation>
            <value>non-profit</value>
        </filters>
        <filters>
            <field>PRODUCT2.NAME</field>
            <operation>contains</operation>
            <value>dba</value>
        </filters>
        <filters>
            <field>PRODUCT2.NAME</field>
            <operation>contains</operation>
            <value>incorporation</value>
        </filters>
        <label>Abandoner Package</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Abandoner_Package_Active</fullName>
        <booleanFilter>1 AND (2 OR 3 OR 4 OR 5) AND 6</booleanFilter>
        <columns>LZ_Product_ID__c</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>LZ_Process_ID__c</columns>
        <columns>Process__c</columns>
        <columns>LZ_Component_Type_ID__c</columns>
        <columns>Component_Type__c</columns>
        <columns>LZ_Parent_Product_ID__c</columns>
        <columns>Parent__c</columns>
        <columns>LZ_Product_Line_ID__c</columns>
        <columns>Product_Line__c</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Component_Type__c</field>
            <operation>equals</operation>
            <value>package</value>
        </filters>
        <filters>
            <field>PRODUCT2.NAME</field>
            <operation>contains</operation>
            <value>llc</value>
        </filters>
        <filters>
            <field>PRODUCT2.NAME</field>
            <operation>contains</operation>
            <value>non-profit</value>
        </filters>
        <filters>
            <field>PRODUCT2.NAME</field>
            <operation>contains</operation>
            <value>dba</value>
        </filters>
        <filters>
            <field>PRODUCT2.NAME</field>
            <operation>contains</operation>
            <value>incorporation</value>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Abandoner Package (Active)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <columns>LZ_Product_ID__c</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>Relationship_Type__c</columns>
        <columns>LZ_Process_ID__c</columns>
        <columns>Process__c</columns>
        <columns>LZ_Component_Type_ID__c</columns>
        <columns>Component_Type__c</columns>
        <columns>LZ_Parent_Product_ID__c</columns>
        <columns>Parent__c</columns>
        <columns>LZ_Product_Line_ID__c</columns>
        <columns>Product_Line__c</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>Deployed__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Package_Active</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>LZ_Product_ID__c</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>LZ_Process_ID__c</columns>
        <columns>Process__c</columns>
        <columns>LZ_Component_Type_ID__c</columns>
        <columns>Component_Type__c</columns>
        <columns>LZ_Parent_Product_ID__c</columns>
        <columns>Parent__c</columns>
        <columns>LZ_Product_Line_ID__c</columns>
        <columns>Product_Line__c</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Component_Type__c</field>
            <operation>equals</operation>
            <value>package</value>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Package (Active)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Process_Active</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>LZ_Product_ID__c</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>LZ_Process_ID__c</columns>
        <columns>Process__c</columns>
        <columns>LZ_Component_Type_ID__c</columns>
        <columns>Component_Type__c</columns>
        <columns>LZ_Parent_Product_ID__c</columns>
        <columns>Parent__c</columns>
        <columns>LZ_Product_Line_ID__c</columns>
        <columns>Product_Line__c</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Component_Type__c</field>
            <operation>equals</operation>
            <value>process</value>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Process (Active)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Utility_Patent_Step_II</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Process__c</columns>
        <columns>Relationship_Type__c</columns>
        <columns>Product_Line__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Process__c</field>
            <operation>equals</operation>
            <value>Utility Patent Step II</value>
        </filters>
        <label>Utility Patent Step II</label>
        <language>en_US</language>
        <sharedTo>
            <role>Sales_Reporting_Analyst</role>
            <role>SalesforceSupport296281</role>
        </sharedTo>
    </listViews>
</CustomObject>